@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2025 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,10 +22,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
-import com.alibaba.fastjson2.JSONObject;
-import com.alibaba.fastjson2.TypeReference;
 import com.azure.core.util.Context;
 import com.azure.search.documents.SearchClient;
 import com.azure.search.documents.SearchDocument;
@@ -43,9 +41,9 @@ import com.azure.search.documents.models.IndexingResult;
 import com.azure.search.documents.models.SearchOptions;
 import com.azure.search.documents.models.VectorSearchOptions;
 import com.azure.search.documents.models.VectorizedQuery;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.jspecify.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.springframework.ai.document.Document;
 import org.springframework.ai.document.DocumentMetadata;
@@ -54,6 +52,7 @@ import org.springframework.ai.embedding.EmbeddingOptions;
 import org.springframework.ai.model.EmbeddingUtils;
 import org.springframework.ai.observation.conventions.VectorStoreProvider;
 import org.springframework.ai.observation.conventions.VectorStoreSimilarityMetric;
+import org.springframework.ai.util.JsonHelper;
 import org.springframework.ai.vectorstore.AbstractVectorStoreBuilder;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.filter.FilterExpressionConverter;
@@ -78,12 +77,15 @@ import org.springframework.util.StringUtils;
  * @author Soby Chacko
  * @author Jinwoo Lee
  * @author Alexandros Pappas
+ * @author chabinhwang
  */
 public class AzureVectorStore extends AbstractObservationVectorStore implements InitializingBean {
 
 	public static final String DEFAULT_INDEX_NAME = "spring_ai_azure_vector_store";
 
-	private static final Logger logger = LoggerFactory.getLogger(AzureVectorStore.class);
+	private static final Log logger = LogFactory.getLog(AzureVectorStore.class);
+
+	private static final JsonHelper jsonHelper = new JsonHelper();
 
 	private static final String SPRING_AI_VECTOR_CONFIG = "spring-ai-vector-config";
 
@@ -173,12 +175,13 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 		List<float[]> embeddings = this.embeddingModel.embed(documents, EmbeddingOptions.builder().build(),
 				this.batchingStrategy);
 
-		final var searchDocuments = documents.stream().map(document -> {
+		final var searchDocuments = IntStream.range(0, documents.size()).mapToObj(i -> {
+			Document document = documents.get(i);
 			SearchDocument searchDocument = new SearchDocument();
 			searchDocument.put(ID_FIELD_NAME, document.getId());
-			searchDocument.put(this.embeddingFieldName, embeddings.get(documents.indexOf(document)));
+			searchDocument.put(this.embeddingFieldName, embeddings.get(i));
 			searchDocument.put(this.contentFieldName, document.getText());
-			searchDocument.put(this.metadataFieldName, new JSONObject(document.getMetadata()).toJSONString());
+			searchDocument.put(this.metadataFieldName, jsonHelper.toJson(document.getMetadata()));
 
 			// Add the filterable metadata fields as top level fields, allowing filler
 			// expressions on them.
@@ -264,7 +267,7 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 
 				return Document.builder().id(id).text(content).metadata(metadata).score(result.getScore()).build();
 			})
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
@@ -313,7 +316,9 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 
 		SearchIndex index = this.searchIndexClient.createOrUpdateIndex(searchIndex);
 
-		logger.info("Created search index: {}", index.getName());
+		if (logger.isInfoEnabled()) {
+			logger.info("Created search index: " + index.getName());
+		}
 	}
 
 	@Override
@@ -340,12 +345,12 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 			return new HashMap<>();
 		}
 		try {
-			Map<String, Object> parsed = JSONObject.parseObject(metadataJson, new TypeReference<Map<String, Object>>() {
-			});
-			return (parsed == null) ? new HashMap<>() : new HashMap<>(parsed);
+			return new HashMap<>(jsonHelper.fromJsonToMap(metadataJson));
 		}
-		catch (Exception ex) {
-			logger.warn("Failed to parse metadata JSON. Using empty metadata. json={}", metadataJson, ex);
+		catch (IllegalStateException ex) {
+			if (logger.isWarnEnabled()) {
+				logger.warn("Failed to parse metadata JSON. Using empty metadata. json=" + metadataJson, ex);
+			}
 			return new HashMap<>();
 		}
 	}
